fixup! fix search blur on mobile devices, improve offer

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -59,7 +59,7 @@ nav
   width: 100vw
   height: 100vh
   background: transparentize(#000000, 0.4)
-  z-index: 99
+  z-index: 98
   -webkit-backdrop-filter: blur(40px)
   backdrop-filter: blur(40px)
   #box
